--- a/1-ETL Overview/01_06_Solution1_begin.ipynb
+++ b/1-ETL Overview/01_06_Solution1_begin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#sample_data = pd.read_csv(\"..\\Resources\\Ex_Files_ETL_Python_SQL\\Exercise Files\\Chapter_1\\sample_data.csv\")\n",
-    "sample_data = pd.read_csv(\"1-ETL Overview\\sample_data.csv\")"
+    "sample_data = pd.read_csv(\"sample_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4       Namibia    2019-03-07  38687.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "199  New Zealand    2019-09-30  81174.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "(200, 8)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "Length: 200, dtype: bool"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,17 +328,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Filtering for duplicates\n",
     "duplicate_rows = sample_data[sample_data.duplicated()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +776,7 @@
        "199   New Zealand    2019-09-30  81174.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
